baseconfig-palybook/files/iptables/default_iptables
# Generated by iptables-save v1.4.21 on Mon Jul 25 15:50:44 2016
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
## PING 
-A INPUT -p icmp -m icmp --icmp-type 0 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT
## DNS 
-A INPUT -s 152.13.16.0/22 -p udp -m udp --sport 53 -j ACCEPT
-A INPUT -s 10.30.16.0/22 -p udp -m udp --sport 53 -j ACCEPT
## SSH 
-A INPUT -p tcp -m tcp --sport 22 -m state --state NEW,ESTABLISHED -j ACCEPT
## LDAP 
-A INPUT -p tcp -m tcp --sport 636 -m state --state ESTABLISHED -j ACCEPT
## PUPPET
-A INPUT -p tcp -m tcp --sport 8140 -m state --state ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --sport 8142 -m state --state ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --sport 61613 -m state --state ESTABLISHED -j ACCEPT
COMMIT
# Completed on Mon Jul 25 15:50:44 2016
